Fixed overflow

--- a/public/css/_home.sass
+++ b/public/css/_home.sass
@@ -689,6 +689,7 @@ section.screenshots
   align-items: center
   justify-content: center
   height: 100%
+  overflow: hidden
   .screenshot
     margin: 0 auto
     position: relative
